Fixed quick note overflow

--- a/src/components/Notes/css/NotePreview.scss
+++ b/src/components/Notes/css/NotePreview.scss
@@ -1,6 +1,6 @@
 .note-preview{
     // max-width: 290px;
-    max-height: 180px;
+    // max-height: 180px;
     
     padding: 16px 14px;
 
